--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class: right, bottom, title-slide
 
 * Using `targets` and `renv` within a containerised **GitHub Actions** workflow
 
-* The `container-workflow-template` repository as a template for future projects
+* The `container-template` repository as a template for future projects
 
 ---
 
@@ -66,7 +66,7 @@ class: center, middle
 
 class: center, middle
 
-### The `container-workflow-template` repository as a template for future projects
+### The `container-template` repository as a template for future projects
 
 ---
 
@@ -84,7 +84,7 @@ Slides can be viewed at https://ecohealthalliance.github.io/githubactions or PDF
 
 R scripts for slides available at https://github.com/ecohealthalliance/githubactions
 
-Repository for `container-workflow-template` at https://github.com/ecohealthalliance/container-workflow-template
+Repository for `container-template` at https://github.com/ecohealthalliance/container-template
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
